# morel

./: Cargo.toml
bevy-test/: Cargo.toml  readme.md  watch.batch
bevy-test/resources/: config.toml
bevy-test/src/: camera.rs  config.rs  main.rs  player.rs
