[package]
name = "bevy-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_rapier3d = "0.22.0"
bevy_third_person_camera = "0.1.0"
bimap = "0.6.3"
serde = "1.0.188"
smooth-bevy-cameras = "0.9.0"
thiserror = "1.0.48"
toml = "0.8.0"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
